--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,21 @@
 
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+	
 <head>
-  
+	<title>{{.Title}}</title>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+    <meta name="description" content="Glance is an app that pushes the most relevant content/news from around the world to your phone's lockscreen. By swiping up and down to see more headlines, swiping left to read or right to unlock your phone, you will rack-up points which you can redeem instantly in form of airtime. That is, you get rewarded for interacting with news feeds on your lock-screen.
+
+With Glance, you can do alot without unlocking your phone. It's available only on Android for now." />
+    <meta name="keywords" content="App, Nigeria, Africa, Advertising, Bonus, recharge, free, airtime, offers, gifts,glance, discounts" />
+    <meta name="author" content="Appiculate" />
+
+    <meta property="og:image" content="http://getbonus.ng/images/content/screenshots/Screenshot_20160614-050834.png" />
+    <meta property="og:image" content="http://getbonus.ng/images/content/screenshots/Screenshot_20160615-035319.png" />
+    <meta property="og:image" content="http://getbonus.ng/images/content/screenshots/Screenshot_20160617-180413.png" />
+    <meta property="og:image" content="http://getbonus.ng/images/content/screenshots/Screenshot_20160617-181213.png" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   
-	<title>{{.Title}}</title>
 </head>
 <body>
 
