--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,14 @@ With Glance, you can do alot without unlocking your phone. It's available only o
     <meta name="keywords" content="App, Nigeria, Africa, Advertising, Bonus, recharge, free, airtime, offers, gifts,glance, discounts" />
     <meta name="author" content="Appiculate" />
 
-    <meta property="og:image" content="http://getbonus.ng/images/content/screenshots/Screenshot_20160614-050834.png" />
-    <meta property="og:image" content="http://getbonus.ng/images/content/screenshots/Screenshot_20160615-035319.png" />
-    <meta property="og:image" content="http://getbonus.ng/images/content/screenshots/Screenshot_20160617-180413.png" />
-    <meta property="og:image" content="http://getbonus.ng/images/content/screenshots/Screenshot_20160617-181213.png" />
+    <meta property="og:image" content="https://storage.googleapis.com/appiculate-glance/Screenshot_20160630-075007.png" />
+    <meta property="og:image" content="https://storage.googleapis.com/appiculate-glance/Screenshot_20160630-075023.png" />
+    <meta property="og:image" content="https://storage.googleapis.com/appiculate-glance/Screenshot_20160630-075152.png" />
+    <meta property="og:image" content="https://storage.googleapis.com/appiculate-glance/Screenshot_20160630-075340.png" />
+    <meta property="og:image" content="https://storage.googleapis.com/appiculate-glance/Screenshot_20160630-075503.png" />
+    <meta property="og:image" content="https://storage.googleapis.com/appiculate-glance/Screenshot_20160630-075531.png" />
+    <meta property="og:image" content="https://storage.googleapis.com/appiculate-glance/Screenshot_20160630-075730.png" />
+    <meta property="og:image" content="https://storage.googleapis.com/appiculate-glance/Screenshot_20160630-101147.png" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   
 </head>
